<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/screenname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/moreAppsScreen_title" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:text="@string/moreAppsScreen_text"
        android:layout_below="@+id/screenname"
        android:layout_alignLeft="@+id/screenname"
        android:layout_alignStart="@+id/screenname" />

    <Button
        android:id="@+id/moreAppsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="40dp"
        android:text="@string/moreAppsScreen_button" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moreAppsScreen_text2"
        android:layout_alignLeft="@+id/text1"
        android:layout_alignStart="@+id/text1"
        android:layout_below="@+id/moreAppsButton"
        android:layout_marginTop="44dp" />


</RelativeLayout>