<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eddSettingDetailsScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlueColor">

    <TextView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="7dp"
        android:text="@string/obWheelScreen_title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:switchMinWidth="50dp"
        android:switchPadding="10dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/switch1"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/switch1"
        android:layout_toStartOf="@+id/switch1"
        android:lines="2"
        android:text="@string/obWheelScreen_switchText1" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/switch1"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/switch1"
        android:layout_toRightOf="@+id/switch1"
        android:lines="2"
        android:text="@string/obWheelScreen_switchText2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/data"
        android:layout_alignStart="@+id/data"
        android:layout_below="@+id/data"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:lines="2"
        android:text="@string/obWheelScreen_instructions1"
        android:textColor="@color/disclaimerTabColor" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="5dp"
        android:lines="2"
        android:text="@string/obWheelScreen_instructions2"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="5dp"
        android:lines="2"
        android:text="@string/obWheelScreen_instructions3"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="5dp"
        android:lines="3"
        android:text="@string/obWheelScreen_instructions4"
        android:textColor="@color/whiteColor" />

    <!-- Making the below programmatically
     <ImageView
         android:id="@+id/obWheel_outer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleX="0.9"
         android:scaleY="0.9"
         app:srcCompat="@drawable/outer_orange_cropped"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />

     <ImageView
         android:id="@+id/obWheel_inner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleX="0.7"
         android:scaleY="0.7"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         app:srcCompat="@drawable/inner_trial_circular_pic" />
         -->

</RelativeLayout>